--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <title>Imagem que redimensiona</title>
+  <title>Ballare - novo layout</title>
   <style>
     img {
       width: 100%;
